[package]
name = "toodoos"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["async-std", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

directories-next = "2.0"
tracing-subscriber = "0.3"
async-std = "1.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
surrealkv = "0.3.6"
chrono = "0.4.38"
